--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@
             with:
               context: .
               push: true
-              tags: sukumar1616/JavaK8sApp:latest
+              tags: sukumar1616/myjavaapp:latest
